prevent Dots from shifting text on hover

--- a/src/components/Post/Comment/Comment.css
+++ b/src/components/Post/Comment/Comment.css
@@ -1,11 +1,9 @@
 .commenter {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
-  /* margin: 12px 0; */
-  margin-bottom: 4px;
-  /* height: max-content; */
-  /* height: 18px; */
+  padding-bottom: 4px;
 }
 
 .commenter .comment {
