--- a/src/components/Post/CommentDropdown/CommentDropdown.css
+++ b/src/components/Post/CommentDropdown/CommentDropdown.css
@@ -14,6 +14,7 @@
   width: 200px;
   z-index: 1;
   right: 0;
+  top: 8px;
 }
 
 .comment-dropdown button {
@@ -37,9 +38,12 @@
 }
 
 .comment-dropdown-container .dots {
+  position: absolute;
+  right: 0;
+  transform: translateY(-50%);
   cursor: pointer;
   fill: var(--text);
   margin-left: auto;
-  height: 18px;
-  width: 18px;
+  height: 22px;
+  width: 22px;
 }
